--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -4,6 +4,7 @@
     <input type="checkbox" id="{{ todo.id }} " name="{{ todo.id }} value="{{
     todo.todo_label }}" />
     <label for="{{ todo.id }}">{{ todo.todo_label }}</label>
+    <a href="{% url 'details' todo.id %}">details</a>
   </fieldset>
   {% endfor %}
 </ul>
