--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -1,10 +1,19 @@
-<ul>
-  {% for todo in todos_list %}
-  <fieldset>
-    <input type="checkbox" id="{{ todo.id }} " name="{{ todo.id }} value="{{
-    todo.todo_label }}" />
-    <label for="{{ todo.id }}">{{ todo.todo_label }}</label>
-    <a href="{% url 'details' todo.id %}">details</a>
-  </fieldset>
-  {% endfor %}
-</ul>
+{% load static %}
+
+<head>
+  <script src="{% static 'todos/index.js' %}" defer></script>
+</head>
+
+<!DOCTYPE html>
+<html>
+  <ul>
+    {% for todo in todos_list %}
+    <fieldset>
+      <input type="checkbox" id="{{ todo.id }} " name="{{ todo.id }} value="{{
+      todo.todo_label }}" />
+      <label for="{{ todo.id }}">{{ todo.todo_label }}</label>
+      <a href="{% url 'details' todo.id %}">details</a>
+    </fieldset>
+    {% endfor %}
+  </ul>
+</html>
