--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -17,10 +17,13 @@
   <ul>
     {% for todo in todos_list %}
     <fieldset>
-      <input type="checkbox" id="{{ todo.id }} " name="{{ todo.id }} value="{{
-      todo.todo_label }}" />
-      <label for="{{ todo.id }}">{{ todo.todo_label }}</label>
-      <a href="{% url 'details' todo.id %}">details</a>
+      <form action="{% url 'index' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="todo-id" value="{{ todo.id }}">
+        <input type="checkbox" id="{{ todo.id }}" name="completed" value="true" {% if todo.is_checked %}checked{% endif %} onchange="this.form.submit();" />
+        <label for="{{ todo.id }}">{{ todo.todo_label }}</label>
+        <a href="{% url 'details' todo.id %}">details</a>
+      </form>
     </fieldset>
     {% endfor %}
   </ul>
