--- a/todos/templates/base.html
+++ b/todos/templates/base.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}My Django App{% endblock %}</title>    
+    <title>{% block title %}My Django App{% endblock %}</title>
+    <link rel="stylesheet" href="{% static '/todos/index.css' %}" />
   </head>
   <body>
     {% block content %}
