--- a/todos/templates/base.html
+++ b/todos/templates/base.html
@@ -1,11 +1,15 @@
-{% load static %}
+{% load compress %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}My Django App{% endblock %}</title>
-    <link rel="stylesheet" href="{% static '/todos/index.css' %}" />
+    <!-- <link rel="stylesheet" href="{% static '/todos/index.css' %}" /> -->
+    {% compress css %}
+      <link rel="stylesheet" type="text/x-scss" href="{% static '/todos/index.scss' %}" />
+    {% endcompress %}
   </head>
   <body>
     {% block content %}
