fix: load static files

--- a/todos/templates/base.html
+++ b/todos/templates/base.html
@@ -1,4 +1,4 @@
-{% load compress %}
+{% load static %} {% load compress %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,9 +6,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}My Django App{% endblock %}</title>
-    <!-- <link rel="stylesheet" href="{% static '/todos/index.css' %}" /> -->
     {% compress css %}
-      <link rel="stylesheet" type="text/x-scss" href="{% static '/todos/index.scss' %}" />
+    <link
+      rel="stylesheet"
+      type="text/x-scss"
+      href="{% static '/todos/index.scss' %}"
+    />
     {% endcompress %}
   </head>
   <body>
